Reflect current work

--- a/src/linclust/CMakeLists.txt
+++ b/src/linclust/CMakeLists.txt
@@ -3,5 +3,6 @@ set(linclust_source_files
         linclust/kmerindexdb.cpp
         linclust/kmersearch.cpp
         linclust/LinsearchIndexReader.cpp
+        linclust/resortprefilter.cpp
         PARENT_SCOPE
         )
